--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: polla
+  password: L4P0ll4$$$!noNo
   socket: /var/run/mysqld/mysqld.sock
 
 development:
